<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAuthor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contributor_label"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            tools:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_label"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            tools:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvURL_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_label"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            tools:text="TextView" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivDividerReview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        app:srcCompat="@android:drawable/divider_horizontal_bright" />

</LinearLayout>