<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailViewActivity">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="100">


        <TextView
            android:id="@+id/tv_movietitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Poster"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/detailview_movie_poster"
                android:paddingLeft="10dp"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/tv_releasedate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@+id/iv_Poster"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_voteavg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_releasedate"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_Poster"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnFavorite"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_below="@id/tv_voteavg"
                android:layout_alignStart="@+id/tv_releasedate"
                android:layout_alignLeft="@+id/tv_releasedate"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center|center_vertical"
                android:singleLine="false"
                android:text="@string/btnFavorite"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnUnFavorite"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_below="@id/tv_voteavg"
                android:layout_alignStart="@+id/tv_releasedate"
                android:layout_alignLeft="@+id/tv_releasedate"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center|center_vertical"
                android:singleLine="false"
                android:text="@string/btn_remove_from_favorites"
                android:textColor="@android:color/background_light"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_Poster"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ivDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/background_dark"
                    app:srcCompat="@android:drawable/divider_horizontal_bright" />

                <TextView
                    android:id="@+id/tvTrailer_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/trailers_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scrollbars="vertical"
                    app:spanCount="2"
                    tools:listitem="@layout/rv_trailer">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/tvReviewsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/reviews_label"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/rv_reviews" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>